--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ target/
 *.iws
 *.iml
 *.ipr
+out/
 
 ### Eclipse ###
 .apt_generated
@@ -36,3 +37,12 @@ build/
 
 ### Mac OS ###
 .DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Reports (Extent Reports)
+reports/
+
