--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
             <version>2.20.0</version>
         </dependency>
 
+        <!-- Extent Reports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
