--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>5.1.2</version>
         </dependency>
 
+        <!-- Commons IO (for screenshots) -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version>
+        </dependency>
 
     </dependencies>
 
